apps/node-red/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: node-red
  labels:
    replicator.v1.mittwald.de/secret: default-samsonnguyen-ca
